[gd_scene load_steps=23 format=3 uid="uid://dja8sr2hkb8c3"]

[ext_resource type="Script" path="res://Menu.gd" id="1_0mf3w"]
[ext_resource type="Texture2D" uid="uid://um1fcr6ky3k2" path="res://Art assets/Menu Background.png" id="1_h8ale"]
[ext_resource type="Texture2D" uid="uid://dobfcipcg8n4e" path="res://Art assets/Start_Button_Idle.png" id="3_4fwnv"]
[ext_resource type="Texture2D" uid="uid://cil705hbvr2ua" path="res://Art assets/Start_Button_Press.png" id="4_ugos2"]
[ext_resource type="Texture2D" uid="uid://derxt17sf6tjs" path="res://Art assets/Start_Button_Hover.png" id="5_wlyyt"]
[ext_resource type="Texture2D" uid="uid://q004ofdwldxh" path="res://Art assets/Exit_Button_Idle.png" id="8_v8ikh"]
[ext_resource type="Texture2D" uid="uid://b1344n6f3wxer" path="res://Art assets/Exit_Button_Press.png" id="9_eu81n"]
[ext_resource type="Texture2D" uid="uid://c73mli1jehrfh" path="res://Art assets/Settings_Button_Idle_4.0.png" id="9_gfwub"]
[ext_resource type="Texture2D" uid="uid://dsqlo7yrxjt27" path="res://Art assets/Settings_Button_Press_4.0.png" id="10_r1d53"]
[ext_resource type="Texture2D" uid="uid://btx3hdt7nlpdk" path="res://Art assets/Exit_Button_Hover.png" id="10_whgmk"]
[ext_resource type="Texture2D" uid="uid://h4dt3vgro4n7" path="res://Art assets/Settings_Button_Hover_4.0.png" id="11_he828"]
[ext_resource type="Texture2D" uid="uid://b5odva0ddn1m1" path="res://Art assets/Credits_Button_Idle.png" id="12_41m75"]
[ext_resource type="Texture2D" uid="uid://cy8mt44bvibkv" path="res://Art assets/Credits_Button_Press.png" id="13_jon7d"]
[ext_resource type="Texture2D" uid="uid://d0cbonf5aurqw" path="res://Art assets/Credits_Button_Hover.png" id="14_y6hpc"]
[ext_resource type="Script" path="res://AnimationPlayer.gd" id="15_6obb6"]
[ext_resource type="Texture2D" uid="uid://bk5umkd7dsy6n" path="res://Art assets/Sonar_Line.png" id="15_131t4"]
[ext_resource type="Texture2D" uid="uid://yrnxvx11l6uq" path="res://Art assets/Sonar_Foreground.png" id="16_nsvsp"]
[ext_resource type="AudioStream" uid="uid://diaogpcwohs8c" path="res://Music-Assets/Menu.mp3" id="18_tob5f"]
[ext_resource type="AudioStream" uid="uid://cx1knbe3bg6h4" path="res://Music-Assets/StartMusic.mp3" id="19_687xk"]

[sub_resource type="Animation" id="Animation_t8at4"]
length = 0.001

[sub_resource type="Animation" id="Animation_cneya"]
resource_name = "Sonar"
length = 12.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SonarLine:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 7, 7.5, 8, 8.5, 9, 9.5, 10, 10.5, 11, 11.5, 12),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-0.261799, 0.0, 0.261799, 0.523599, 0.785398, 1.0472, 1.309, 1.5708, 1.8326, 2.0944, 2.35619, 2.61799, 2.87979, 3.14159, 3.40339, 3.66519, 3.92699, 4.27606, 4.53786, 4.79966, 5.06145, 5.32325, 5.58505, 5.84685, 6.02139]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ukil"]
_data = {
"RESET": SubResource("Animation_t8at4"),
"Sonar": SubResource("Animation_cneya")
}

[node name="Menu" type="Node2D"]
script = ExtResource("1_0mf3w")

[node name="MenuBackground" type="Sprite2D" parent="."]
position = Vector2(578, 311)
scale = Vector2(0.676, 0.676)
texture = ExtResource("1_h8ale")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StartButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 469.0
offset_top = 403.0
offset_right = 709.0
offset_bottom = 588.0
scale = Vector2(0.704425, 0.54711)
texture_normal = ExtResource("3_4fwnv")
texture_pressed = ExtResource("4_ugos2")
texture_hover = ExtResource("5_wlyyt")

[node name="ExitButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 541.0
offset_top = 545.0
offset_right = 715.0
offset_bottom = 695.0
scale = Vector2(0.644871, 0.666487)
texture_normal = ExtResource("8_v8ikh")
texture_pressed = ExtResource("9_eu81n")
texture_hover = ExtResource("10_whgmk")

[node name="SettingsButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 594.0
offset_top = 386.0
offset_right = 777.0
offset_bottom = 567.0
scale = Vector2(0.72858, 0.718835)
texture_normal = ExtResource("9_gfwub")
texture_pressed = ExtResource("10_r1d53")
texture_hover = ExtResource("11_he828")

[node name="CreditsButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 155.0
offset_top = 192.0
offset_right = 301.0
offset_bottom = 409.0
texture_normal = ExtResource("12_41m75")
texture_pressed = ExtResource("13_jon7d")
texture_hover = ExtResource("14_y6hpc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5ukil")
}
script = ExtResource("15_6obb6")

[node name="SonarLine" type="Sprite2D" parent="."]
position = Vector2(996.989, 176.035)
rotation = 6.02139
scale = Vector2(0.690617, 0.547847)
texture = ExtResource("15_131t4")
offset = Vector2(-3.6, -100)

[node name="SonarForeground" type="Sprite2D" parent="."]
position = Vector2(985, 165.5)
scale = Vector2(0.679, 0.677)
texture = ExtResource("16_nsvsp")

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_tob5f")

[node name="StartMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_687xk")

[connection signal="button_up" from="CanvasLayer/StartButton" to="." method="_on_start_button_button_up"]
[connection signal="mouse_entered" from="CanvasLayer/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CreditsButton" to="." method="_on_credits_button_pressed"]
